--- a/generators/app/templates/src/main/webapp/ts/_elasticsearch-reindex-selected-modal.component.html
+++ b/generators/app/templates/src/main/webapp/ts/_elasticsearch-reindex-selected-modal.component.html
@@ -4,7 +4,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="activeModal.dismiss('closed')">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <<%= jhiPrefixDashed %>-alert-error></<%= jhiPrefixDashed %>-alert-error>
         <p<% if (enableTranslation) { %> jhiTranslate="elasticsearch.reindex.dialog.question"<% } %>>
             Are you sure you want to reindex Elasticsearch? This could take a while!
         </p>
